<resources>
    <string name="app_name">Voice Flashlight</string>
    <string name="general">General</string>
    <string name="switch_sound">Switch Sound</string>
    <string name="enable">Enable</string>
    <string name="turn_on_at_startup">Turn on at startup</string>
    <string name="turn_off_at_exit">Turn off at exit</string>
    <string name="about">About</string>
    <string name="flashlight">Flash Light</string>
    <string name="app_version">Version 1.0</string>
    <string name="voice_recognition">Voice Recognition</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="light_status">Light Status</string>
</resources>